2007-05-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* add FUShmRawCell::index_, which is not necessarily equal to
	FUShmRawCell::fuResourceId_ anymore.
	* add method FUShmRawCell::setFuResourceId(uint).
	* call cell->clear() in FUShmBuffer::releaseRawCell();
	* remove FUShmRawCell::nSkip_ and anything related.

2007-03-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-04
	* bugfix: reco and dqm cells were not 'clear'ed before being
	declared 'free'.

2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* important bug fixes!

2007-03-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* fix waitRecoRead() and waitDqmRead()

2007-03-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* implement nice suggestion from Markus to have raw event cells
	properly discarded regardless of the event being selected or
	rejected.
	* fix to the discard chain for data events being acknowledged by
	the SM
	

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* if I had a nickel for every change I made ...

2007-03-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* new API
	* remove class FUShmBufferCell
	* add classes FUShmRawCell, FUShmRecoCell, and FUShmDqmCell
	* add 'segmentationMode' flag, indicating if the buffer should be
	layout as one large shared memory segment ('false') or if each
	cell should be allocated in its own segment ('true').

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* remove option 'ownsMemory': before, a FUShmBuffer[Cell] could be
	constructed in regular memory. Not anymore!
	* there should be no use case for this anymore, but if (?!)
	anybody would ever be tempted to construct a FUShmBufferCell
	outside the static accessors of FUShmBuffer, it *must* be via a